@@ -1,5 +1,6 @@
 next
 
+* [API CHANGE] - RunningAverage field is now AverageField
 * Tests can now be run via "python setup.py test"
 
 Version 0.4.1 "Derpstats" released 2012-01-31
